--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <h1><strong>Long Pham</strong></h1>
-        <p> <a href="mailto:kevinpham158@gmail.com">Kevinpham158@gmail.com</a>. (206) 890 0446. Seattle, Washington.</p>
+        <a href="contactme.html"> Contact Details</a>
         <p> A Marketing Specialist with a Master Business Administration Degree, who loves creativity, design, and web development</p>
       </td>
     </tr>
@@ -104,4 +104,5 @@
     Excellent Written, Verbal Communication, Team collaborate and Public Speaking Skills
   </li>
 </ul>
+
 </html>
