--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </td>
       <td>
         <h1><strong>Long Pham</strong></h1>
-        <a href="Contactme.html"> Contact Details</a>
+        <a href="contactme.html"> Contact Details</a>
         <p> A Marketing Specialist with a Master Business Administration Degree, who loves creativity, design, and web development</p>
       </td>
     </tr>
