--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Long Pham Resume </title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -38,10 +39,12 @@
       Membership: Vietnamese Student Association
     </li>
   </ul>
-  <h2> <strong>EXPERIENCE</strong>
-    <hr>
-  </h2>
-  <h3><strong>State Farm Insurance Agent </strong> – A’lan Edmonson July - October 2021</h3>
+  <h2> <strong>EXPERIENCE</strong></h2>
+  <hr>
+  <h3><strong>State Farm Insurance Agent </strong> – A’lan Edmonson July
+    <span class="date">
+      October 2021
+    </span></h3>
   <p>
     <i>Intern – sales associate</i>
   </p>
@@ -55,7 +58,10 @@
   </ul>
   <h3>
 
-    <strong>City University of Seattle </strong> – Seattle, Washington 2019 – Now
+    <strong>City University of Seattle </strong> – Seattle, Washington
+    <span class="date">
+      2019 - Now
+    </span>
   </h3>
   <p>
     <i>Site Assistant (Part-time)</i>
@@ -69,7 +75,10 @@
     </li>
   </ul>
   <h3>
-    <strong>Public Consulting Group (PCG) </strong> – Seattle, Washington 2018 – 2019
+    Public Consulting Group (PCG) – Seattle, Washington
+    <span class="date">
+      2018 – 2019
+    </span>
   </h3>
   <i>Payroll Consultant Representative</i>
   <ul>
@@ -104,5 +113,5 @@
     Excellent Written, Verbal Communication, Team collaborate and Public Speaking Skills
   </li>
 </ul>
-
+</body>
 </html>
