--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Long Pham Resume </title>
-  <link rel="stylesheet" href=resume/CSS/styles.css">
+  <link rel="stylesheet" href=styles.css">
   <style>
    body{
   margin-left: 20px;
