--- a/index.html
+++ b/index.html
@@ -4,32 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Long Pham Resume </title>
-  <link rel="stylesheet" href=styles.css">
-  <style>
-   body{
-  margin-left: 20px;
-  color:black;
-  background-color: #D8E3E7;
-}
-hr{
-  border-style: solid none none;
-  border-width: medium;
-  border-color: #064663;
-}
-h1{
-  color: #064663;
-}
-h2{
-  color: #064663;
-}
-a{
-  color: #0079FA;
-}
-.date {
-  float: right;
-  margin-right: 500px;
-}
-                                             </style>                                           
+  <link rel="stylesheet" href=CSS/styles.css">                                          
 </head>
 
 <body>
